Navigation problem with Background/Reference Images #63086

Closed
opened 2019-03-29 12:20:51 +01:00 by Patrick Snitjer · 16 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: Intel(R) HD Graphics 520 Intel 4.4.0 - Build 21.20.16.4599

Blender Version
Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-24 00:06, hash: 79f67acccb
Worked: (optional)

Short description of error
Navigation problem (random viewport teleportation) when zooming into background/reference images.

Exact steps for others to reproduce the error

  • startup basic blend file;
  • import reference or background image;
  • navigate (pan, orbit or zoom) while hovering mouse over image;
  • viewport moves to random point, fixable by hitting shift+C.
**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: Intel(R) HD Graphics 520 Intel 4.4.0 - Build 21.20.16.4599 **Blender Version** Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-24 00:06, hash: `79f67acccb` Worked: (optional) **Short description of error** Navigation problem (random viewport teleportation) when zooming into background/reference images. **Exact steps for others to reproduce the error** - startup basic blend file; - import reference or background image; - navigate (pan, orbit or zoom) while hovering mouse over image; - viewport moves to random point, fixable by hitting shift+C.

Added subscriber: @PatrickSnitjer

Added subscriber: @PatrickSnitjer

#63074 was marked as duplicate of this issue

#63074 was marked as duplicate of this issue
Patrick Snitjer changed title from Zooming problem with Background/Reference Images to Navigation problem with Background/Reference Images 2019-03-29 12:23:56 +01:00

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Brecht Van Lommel was assigned by Sebastian Parborg 2019-03-29 12:57:19 +01:00

I should note that this only happens with "Auto depth" is on in the settings.
So it probably means that the depth is not good for image objects.

I should note that this only happens with "Auto depth" is on in the settings. So it probably means that the depth is not good for image objects.

Added subscriber: @MikhailGavrilec

Added subscriber: @MikhailGavrilec
Brecht Van Lommel removed their assignment 2019-03-29 13:23:15 +01:00
Campbell Barton was assigned by Brecht Van Lommel 2019-03-29 13:23:15 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

Campbell is the one who has done most work on 3D navigation.

Campbell is the one who has done most work on 3D navigation.

What I noticed it only occurs when this option is unchecked(And it's unchecked by default now) image.png
So basically marking this box will solve the problem until the bug isn't fixed.

What I noticed it only occurs when this option is unchecked(And it's unchecked by default now) ![image.png](https://archive.blender.org/developer/F6898501/image.png) So basically marking this box will solve the problem until the bug isn't fixed.
Campbell Barton was unassigned by Sebastian Parborg 2019-03-29 20:14:49 +01:00
Sebastian Parborg self-assigned this 2019-03-29 20:14:49 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I've uploaded a fix: D4616

I've uploaded a fix: [D4616](https://archive.blender.org/developer/D4616)

This issue was referenced by de0dab66ff

This issue was referenced by de0dab66ff896992251763d6e799cc682ff03543

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This comment was removed by @MikhailGavrilec

*This comment was removed by @MikhailGavrilec*

I'm guessing that you used an old build?

I'm guessing that you used an old build?

Maybe your are right. image.png
I just don't have newer builds for linux 64. it looks like it's not updated yet. I will wait for next build.
image.png
Sorry and thank you for reply.

Maybe your are right. ![image.png](https://archive.blender.org/developer/F6903610/image.png) I just don't have newer builds for linux 64. it looks like it's not updated yet. I will wait for next build. ![image.png](https://archive.blender.org/developer/F6903621/image.png) Sorry and thank you for reply.

I've kicked the build bot so the 64bit build should be up to date now.

I've kicked the build bot so the 64bit build should be up to date now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63086
No description provided.